site/docs/3.4.0/api/python/_sources/reference/api/pyspark.ml.clustering.KMeans.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.


KMeans
============================

.. currentmodule:: pyspark.ml.clustering

.. autoclass:: KMeans

    
      
    

    
    

    .. rubric:: Methods

    .. autosummary::
    
       ~KMeans.clear
       ~KMeans.copy
       ~KMeans.explainParam
       ~KMeans.explainParams
       ~KMeans.extractParamMap
       ~KMeans.fit
       ~KMeans.fitMultiple
       ~KMeans.getDistanceMeasure
       ~KMeans.getFeaturesCol
       ~KMeans.getInitMode
       ~KMeans.getInitSteps
       ~KMeans.getK
       ~KMeans.getMaxBlockSizeInMB
       ~KMeans.getMaxIter
       ~KMeans.getOrDefault
       ~KMeans.getParam
       ~KMeans.getPredictionCol
       ~KMeans.getSeed
       ~KMeans.getSolver
       ~KMeans.getTol
       ~KMeans.getWeightCol
       ~KMeans.hasDefault
       ~KMeans.hasParam
       ~KMeans.isDefined
       ~KMeans.isSet
       ~KMeans.load
       ~KMeans.read
       ~KMeans.save
       ~KMeans.set
       ~KMeans.setDistanceMeasure
       ~KMeans.setFeaturesCol
       ~KMeans.setInitMode
       ~KMeans.setInitSteps
       ~KMeans.setK
       ~KMeans.setMaxBlockSizeInMB
       ~KMeans.setMaxIter
       ~KMeans.setParams
       ~KMeans.setPredictionCol
       ~KMeans.setSeed
       ~KMeans.setSolver
       ~KMeans.setTol
       ~KMeans.setWeightCol
       ~KMeans.write

    
    

    
    

    .. rubric:: Attributes

    .. autosummary::
    
       ~KMeans.distanceMeasure
       ~KMeans.featuresCol
       ~KMeans.initMode
       ~KMeans.initSteps
       ~KMeans.k
       ~KMeans.maxBlockSizeInMB
       ~KMeans.maxIter
       ~KMeans.params
       ~KMeans.predictionCol
       ~KMeans.seed
       ~KMeans.solver
       ~KMeans.tol
       ~KMeans.weightCol

    
    

    
    

    .. rubric:: Methods Documentation

    
    .. automethod:: clear
    .. automethod:: copy
    .. automethod:: explainParam
    .. automethod:: explainParams
    .. automethod:: extractParamMap
    .. automethod:: fit
    .. automethod:: fitMultiple
    .. automethod:: getDistanceMeasure
    .. automethod:: getFeaturesCol
    .. automethod:: getInitMode
    .. automethod:: getInitSteps
    .. automethod:: getK
    .. automethod:: getMaxBlockSizeInMB
    .. automethod:: getMaxIter
    .. automethod:: getOrDefault
    .. automethod:: getParam
    .. automethod:: getPredictionCol
    .. automethod:: getSeed
    .. automethod:: getSolver
    .. automethod:: getTol
    .. automethod:: getWeightCol
    .. automethod:: hasDefault
    .. automethod:: hasParam
    .. automethod:: isDefined
    .. automethod:: isSet
    .. automethod:: load
    .. automethod:: read
    .. automethod:: save
    .. automethod:: set
    .. automethod:: setDistanceMeasure
    .. automethod:: setFeaturesCol
    .. automethod:: setInitMode
    .. automethod:: setInitSteps
    .. automethod:: setK
    .. automethod:: setMaxBlockSizeInMB
    .. automethod:: setMaxIter
    .. automethod:: setParams
    .. automethod:: setPredictionCol
    .. automethod:: setSeed
    .. automethod:: setSolver
    .. automethod:: setTol
    .. automethod:: setWeightCol
    .. automethod:: write

    
    

    
    

    .. rubric:: Attributes Documentation

    
    .. autoattribute:: distanceMeasure
    .. autoattribute:: featuresCol
    .. autoattribute:: initMode
    .. autoattribute:: initSteps
    .. autoattribute:: k
    .. autoattribute:: maxBlockSizeInMB
    .. autoattribute:: maxIter
    .. autoattribute:: params
    .. autoattribute:: predictionCol
    .. autoattribute:: seed
    .. autoattribute:: solver
    .. autoattribute:: tol
    .. autoattribute:: weightCol

    
    
